--- a/html-master/scss/_variables.scss
+++ b/html-master/scss/_variables.scss
@@ -2,6 +2,7 @@
 .filmvermittlung-profile-extension{
     --ext-primary-font: 'Sathu';
     --ext-secondary-font: 'a Atomic Md';
+    --ext-third-font: 'Arial';
 }
 
 
