update task dated 23.04.2025 1st push

--- a/html-master/scss/_variables.scss
+++ b/html-master/scss/_variables.scss
@@ -20,6 +20,7 @@
     --ext-primary-color: #682511;
     --ext-primary-color-dark: #3a2924;
     --light-blue: #5ed2f4;
+    --site-grey: #dcdcdc;
 }
 
 
