--- a/html-master/Styles/style.css
+++ b/html-master/Styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! Init */
 /*!
    * Bootstrap  v5.3.3 (https://getbootstrap.com/)
@@ -22,7 +23,7 @@
   --bs-gray-dark: #343a40;
   --bs-gray-100: #f8f9fa;
   --bs-gray-200: #e9ecef;
-  --bs-gray-300: #dee2e6;
+  --bs-gray-300: #dcdcdc;
   --bs-gray-400: #ced4da;
   --bs-gray-500: #adb5bd;
   --bs-gray-600: #6c757d;
@@ -35,7 +36,7 @@
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
-  --bs-light: #f8f9fa;
+  --bs-light: #dcdcdc;
   --bs-dark: #212529;
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
@@ -43,7 +44,7 @@
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
-  --bs-light-rgb: 248, 249, 250;
+  --bs-light-rgb: 220, 220, 220;
   --bs-dark-rgb: 33, 37, 41;
   --bs-primary-text-emphasis: #052c65;
   --bs-secondary-text-emphasis: #2b2f32;
@@ -103,7 +104,7 @@
   --bs-highlight-bg: #fff3cd;
   --bs-border-width: 1px;
   --bs-border-style: solid;
-  --bs-border-color: #dee2e6;
+  --bs-border-color: #dcdcdc;
   --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
   --bs-border-radius: 0.375rem;
   --bs-border-radius-sm: 0.25rem;
@@ -126,18 +127,18 @@
 
 [data-bs-theme="dark"] {
   color-scheme: dark;
-  --bs-body-color: #dee2e6;
-  --bs-body-color-rgb: 222, 226, 230;
+  --bs-body-color: #dcdcdc;
+  --bs-body-color-rgb: 220, 220, 220;
   --bs-body-bg: #212529;
   --bs-body-bg-rgb: 33, 37, 41;
   --bs-emphasis-color: #fff;
   --bs-emphasis-color-rgb: 255, 255, 255;
-  --bs-secondary-color: rgba(222, 226, 230, 0.75);
-  --bs-secondary-color-rgb: 222, 226, 230;
+  --bs-secondary-color: rgba(220, 220, 220, 0.75);
+  --bs-secondary-color-rgb: 220, 220, 220;
   --bs-secondary-bg: #343a40;
   --bs-secondary-bg-rgb: 52, 58, 64;
-  --bs-tertiary-color: rgba(222, 226, 230, 0.5);
-  --bs-tertiary-color-rgb: 222, 226, 230;
+  --bs-tertiary-color: rgba(220, 220, 220, 0.5);
+  --bs-tertiary-color-rgb: 220, 220, 220;
   --bs-tertiary-bg: #2b3035;
   --bs-tertiary-bg-rgb: 43, 48, 53;
   --bs-primary-text-emphasis: #6ea8fe;
@@ -147,7 +148,7 @@
   --bs-warning-text-emphasis: #ffda6a;
   --bs-danger-text-emphasis: #ea868f;
   --bs-light-text-emphasis: #f8f9fa;
-  --bs-dark-text-emphasis: #dee2e6;
+  --bs-dark-text-emphasis: #dcdcdc;
   --bs-primary-bg-subtle: #031633;
   --bs-secondary-bg-subtle: #161719;
   --bs-success-bg-subtle: #051b11;
@@ -170,7 +171,7 @@
   --bs-link-color-rgb: 110, 168, 254;
   --bs-link-hover-color-rgb: 139, 185, 254;
   --bs-code-color: #e685b5;
-  --bs-highlight-color: #dee2e6;
+  --bs-highlight-color: #dcdcdc;
   --bs-highlight-bg: #664d03;
   --bs-border-color: #495057;
   --bs-border-color-translucent: rgba(255, 255, 255, 0.15);
@@ -1601,13 +1602,13 @@ progress {
 
 .table-light {
   --bs-table-color: #000;
-  --bs-table-bg: #f8f9fa;
-  --bs-table-border-color: #c6c7c8;
-  --bs-table-striped-bg: #ecedee;
+  --bs-table-bg: #dcdcdc;
+  --bs-table-border-color: #b0b0b0;
+  --bs-table-striped-bg: #d1d1d1;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #dfe0e1;
+  --bs-table-active-bg: #c6c6c6;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e5e6e7;
+  --bs-table-hover-bg: #cccccc;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color); }
@@ -1849,7 +1850,7 @@ textarea.form-control-lg {
   border-radius: var(--bs-border-radius-lg); }
 
 [data-bs-theme="dark"] .form-select {
-  --bs-form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23dee2e6' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e"); }
+  --bs-form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23dcdcdc' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e"); }
 
 .form-check {
   display: block;
@@ -2489,19 +2490,19 @@ textarea.form-control-lg {
 
 .btn-light {
   --bs-btn-color: #000;
-  --bs-btn-bg: #f8f9fa;
-  --bs-btn-border-color: #f8f9fa;
+  --bs-btn-bg: #dcdcdc;
+  --bs-btn-border-color: #dcdcdc;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #d3d4d5;
-  --bs-btn-hover-border-color: #c6c7c8;
-  --bs-btn-focus-shadow-rgb: 211, 212, 213;
+  --bs-btn-hover-bg: #bbbbbb;
+  --bs-btn-hover-border-color: #b0b0b0;
+  --bs-btn-focus-shadow-rgb: 187, 187, 187;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #c6c7c8;
-  --bs-btn-active-border-color: #babbbc;
+  --bs-btn-active-bg: #b0b0b0;
+  --bs-btn-active-border-color: #a5a5a5;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #f8f9fa;
-  --bs-btn-disabled-border-color: #f8f9fa; }
+  --bs-btn-disabled-bg: #dcdcdc;
+  --bs-btn-disabled-border-color: #dcdcdc; }
 
 .btn-dark {
   --bs-btn-color: #fff;
@@ -2616,19 +2617,19 @@ textarea.form-control-lg {
   --bs-gradient: none; }
 
 .btn-outline-light {
-  --bs-btn-color: #f8f9fa;
-  --bs-btn-border-color: #f8f9fa;
+  --bs-btn-color: #dcdcdc;
+  --bs-btn-border-color: #dcdcdc;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #f8f9fa;
-  --bs-btn-hover-border-color: #f8f9fa;
-  --bs-btn-focus-shadow-rgb: 248, 249, 250;
+  --bs-btn-hover-bg: #dcdcdc;
+  --bs-btn-hover-border-color: #dcdcdc;
+  --bs-btn-focus-shadow-rgb: 220, 220, 220;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #f8f9fa;
-  --bs-btn-active-border-color: #f8f9fa;
+  --bs-btn-active-bg: #dcdcdc;
+  --bs-btn-active-border-color: #dcdcdc;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #f8f9fa;
+  --bs-btn-disabled-color: #dcdcdc;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #f8f9fa;
+  --bs-btn-disabled-border-color: #dcdcdc;
   --bs-gradient: none; }
 
 .btn-outline-dark {
@@ -2966,11 +2967,11 @@ textarea.form-control-lg {
   color: var(--bs-dropdown-link-color); }
 
 .dropdown-menu-dark {
-  --bs-dropdown-color: #dee2e6;
+  --bs-dropdown-color: #dcdcdc;
   --bs-dropdown-bg: #343a40;
   --bs-dropdown-border-color: var(--bs-border-color-translucent);
   --bs-dropdown-box-shadow: ;
-  --bs-dropdown-link-color: #dee2e6;
+  --bs-dropdown-link-color: #dcdcdc;
   --bs-dropdown-link-hover-color: #fff;
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
@@ -5665,8 +5666,8 @@ textarea.form-control-lg {
   color: RGBA(var(--bs-light-rgb), var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(var(--bs-light-rgb), var(--bs-link-underline-opacity, 1)) !important; }
   .link-light:hover, .link-light:focus {
-    color: RGBA(249, 250, 251, var(--bs-link-opacity, 1)) !important;
-    text-decoration-color: RGBA(249, 250, 251, var(--bs-link-underline-opacity, 1)) !important; }
+    color: RGBA(227, 227, 227, var(--bs-link-opacity, 1)) !important;
+    text-decoration-color: RGBA(227, 227, 227, var(--bs-link-underline-opacity, 1)) !important; }
 
 .link-dark {
   color: RGBA(var(--bs-dark-rgb), var(--bs-link-opacity, 1)) !important;
@@ -9284,7 +9285,8 @@ textarea.form-control-lg {
 .filmvermittlung-profile-extension {
   --ext-primary-color: #682511;
   --ext-primary-color-dark: #3a2924;
-  --light-blue: #5ed2f4; }
+  --light-blue: #5ed2f4;
+  --site-grey: #dcdcdc; }
 
 .filmvermittlung-profile-extension {
   --container-width: 1200px; }
@@ -9498,6 +9500,102 @@ html, body {
   .filmvermittlung-profile-extension .logo-module .logo-holder img {
     max-height: 150px;
     max-width: 100%; }
+
+.filmvermittlung-profile-extension .filter-params-module > .main-wrap {
+  display: flex;
+  column-gap: 10px;
+  row-gap: 10px;
+  flex-wrap: wrap; }
+
+.filmvermittlung-profile-extension .filter-params-module .filter-param-field-box {
+  flex-grow: 1; }
+  .filmvermittlung-profile-extension .filter-params-module .filter-param-field-box.min-width-1 {
+    min-width: 280px; }
+  .filmvermittlung-profile-extension .filter-params-module .filter-param-field-box.xs-field-box {
+    width: 75px;
+    flex-grow: inherit;
+    min-width: auto; }
+
+.filmvermittlung-profile-extension .filter-params-module .dropdown-menu {
+  width: 100%;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  border-radius: 0px; }
+  .filmvermittlung-profile-extension .filter-params-module .dropdown-menu .item-no-link {
+    padding: 20px 15px; }
+
+.filmvermittlung-profile-extension .filter-params-module .btn {
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  border-radius: 0px;
+  padding: 0 35px 0 20px;
+  height: 70px;
+  font-family: var(--ext-secondary-font);
+  line-height: normal;
+  border: none;
+  text-align: left;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center center; }
+  .filmvermittlung-profile-extension .filter-params-module .btn.reset-btn {
+    background-image: url("../Images/Filter_löschen.png");
+    background-size: 35px; }
+  .filmvermittlung-profile-extension .filter-params-module .btn.tick-btn {
+    background-image: url("../Images/Filter_anwenden.png");
+    background-size: 40px; }
+  .filmvermittlung-profile-extension .filter-params-module .btn.icon-btn {
+    padding: 0px; }
+  .filmvermittlung-profile-extension .filter-params-module .btn.dropdown-toggle.show {
+    background-color: var(--ext-primary-color);
+    color: white; }
+  .filmvermittlung-profile-extension .filter-params-module .btn.dropdown-toggle:after {
+    border-width: 0.5em;
+    margin-left: 13px;
+    display: inline-block;
+    vertical-align: middle; }
+
+.filmvermittlung-profile-extension .custom-check-radio > .main-wrap {
+  display: flex;
+  column-gap: 10px;
+  align-items: top; }
+
+.filmvermittlung-profile-extension .custom-check-radio label {
+  cursor: pointer;
+  max-width: 75%;
+  line-height: 27px; }
+
+.filmvermittlung-profile-extension .custom-check-radio .the-check-radio {
+  width: 27px;
+  height: 27px;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  border-radius: 100%;
+  border: 2px solid;
+  position: relative;
+  overflow: hidden; }
+  .filmvermittlung-profile-extension .custom-check-radio .the-check-radio input {
+    border: none;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+    opacity: 0;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    cursor: pointer; }
+    .filmvermittlung-profile-extension .custom-check-radio .the-check-radio input:checked + .clone {
+      background-color: var(--ext-primary-color); }
+  .filmvermittlung-profile-extension .custom-check-radio .the-check-radio .clone {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    pointer-events: none; }
 
 /*! Vendor */
 /*!
