--- a/html-master/scss/_bodycontent.scss
+++ b/html-master/scss/_bodycontent.scss
@@ -158,4 +158,133 @@
     }
     // logo-module
 
+    // filter-params-module
+    .filter-params-module{
+        & > .main-wrap{
+            display: flex;
+            column-gap: 10px;
+            row-gap: 10px;
+            flex-wrap: wrap;
+        }
+
+        .filter-param-field-box{
+            flex-grow: 1;
+
+            &.min-width-1{
+                min-width: 280px;
+            }
+
+            &.xs-field-box{
+                width: 75px;
+                flex-grow: inherit;
+                min-width: auto;
+            }
+        }
+
+        .dropdown-menu{
+            width: 100%;
+            @include border-radius(0px);
+
+            .item-no-link{
+                padding: 20px 15px;
+            }
+        }
+
+        .btn{
+            @include border-radius(0px);
+            padding: 0 35px 0 20px;
+            height: 70px;
+            font-family: var(--ext-secondary-font); 
+            line-height: normal;
+            border: none;
+            text-align: left;
+            width: 100%;
+            background-repeat: no-repeat;
+            background-position: center center;
+            // &:focus{
+            //     background-color: var(--ext-primary-color);
+            //     color: white;
+            // }
+            &.reset-btn{
+                background-image: url('../Images/Filter_löschen.png');
+                background-size: 35px;
+            }
+            &.tick-btn{
+                background-image: url('../Images/Filter_anwenden.png');
+                background-size: 40px;
+            }
+
+            &.icon-btn{
+                padding: 0px;
+            }
+
+          
+
+            &.dropdown-toggle{
+                &.show{
+                    background-color: var(--ext-primary-color);
+                    color: white;
+                }
+                &:after{
+                    border-width: 0.5em;
+                    margin-left: 13px;
+                    display: inline-block;
+                    vertical-align: middle;
+                }
+            }
+        }
+    }
+    // filter-params-module
+
+    // custom check radio
+    .custom-check-radio{
+        & > .main-wrap{
+            display: flex;
+            column-gap: 10px;
+            align-items: top;
+        }
+
+        label{
+           cursor: pointer;
+           max-width: 75%;
+           line-height: 27px;
+        }
+
+        .the-check-radio{
+            width: 27px;
+            height: 27px;
+            @include border-radius(100%);
+            border: 2px solid;
+            position: relative;
+            overflow: hidden;
+
+            input{
+                border: none;
+                width: 100%;
+                height: 100%;
+                padding: 0px;
+                margin: 0px;
+                opacity: 0;
+                position: absolute;
+                left: 0px;
+                top: 0px;
+                cursor: pointer;
+                &:checked{
+                    & + .clone{
+                        background-color: var(--ext-primary-color);
+                    }
+                }
+            }
+            .clone{
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                left: 0px;
+                top: 0px;
+                pointer-events: none;
+            }
+        }
+    }
+    // custom check radio
+
 }
