update task dated 24.04.2025 1st push

--- a/html-master/scss/_bodycontent.scss
+++ b/html-master/scss/_bodycontent.scss
@@ -65,6 +65,31 @@
                 background-color: var(--light-blue);
             }
         }
+        &.status-red {
+            &:before {
+                background-color: var(--red);
+            }
+        }
+        &.status-light-green {
+            &:before {
+                background-color: var(--light-green);
+            }
+        }
+        &.status-dark-blue {
+            &:before {
+                background-color: var(--dark-blue);
+            }
+        }
+        &.status-pink {
+            &:before {
+                background-color: var(--pink);
+            }
+        }
+        &.status-dark-green{
+            &:before {
+                background-color: var(--dark-green);
+            }
+        }
 
         &:before {
             content: ' ';
@@ -286,5 +311,23 @@
         }
     }
     // custom check radio
+
+    // profile-listing
+    .profile-listing{
+        .info{
+            font-family: var(--ext-secondary-font);
+            font-size: 24px;
+            line-height: normal;
+
+            &.has-status{
+                padding-left: 35px;
+
+                &:before{
+                    top: 3px;
+                }
+            }
+        }
+    }
+    // profile-listing
 
 }
