--- a/html-master/scss/_variables.scss
+++ b/html-master/scss/_variables.scss
@@ -20,6 +20,11 @@
     --ext-primary-color: #682511;
     --ext-primary-color-dark: #3a2924;
     --light-blue: #5ed2f4;
+    --red: #f40146;
+    --light-green: #34f400;
+    --dark-blue: #2c60dc;
+    --pink: #ff63e1;
+    --dark-green: #4ea224;
     --site-grey: #dcdcdc;
 }
 
